--- a/test.html
+++ b/test.html
@@ -15,16 +15,6 @@
 <body>
 <!-- -------------------------------------------------Navbar Starts Here---------------------------------------------------- -->
 
-    <div id="modal1" class="modal">
-      <div class="modal-content">
-        <h4>Modal Header</h4>
-        <p>A bunch of text</p>
-      </div>
-      <div class="modal-footer">
-        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-      </div>
-    </div>   
-
 
    <nav class="nav1">
     <div class="nav-wrapper">
@@ -135,7 +125,7 @@
           </div>
           <div class="col m5 s12 center">
             <div class="request_button">
-              <a class="btn-large"><span>GET BLOOD</span></a>
+              <a class="btn-large"><span>GET BLOODPORT APP</span></a>
             </div>
             
           </div>
@@ -686,7 +676,6 @@
     
     $(document).ready(function()
     {
-       $('#modal1').modal('open');
 
 
       $(".button-collapse").sideNav();
