--- a/updatePassword.html
+++ b/updatePassword.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html ng-app="forgot_password_app">
+<html ng-app="update_password_app">
 <head>
-	<title>Reset Your Password</title>
+	<title>Update Your Password</title>
 	  <link href="https://fonts.googleapis.com/css?family=Dosis:600" rel="stylesheet">
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
@@ -13,7 +13,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.js"></script>
-      <script type="text/javascript" src="js/forgotPassword.js"></script>
+      <script type="text/javascript" src="js/updatePassword.js"></script>
 </head>
 <body >
 	<div class="row">
@@ -21,14 +21,22 @@
     </div>
   </div>
 
-      <div class="footer-copyright center">
-        <a class="white-text text-lighten-4 foot_next"  href="#">HOME</a>
-        <a class="white-text text-lighten-4 foot_next"  href="#info">SERVICES</a>
-        <a class="white-text text-lighten-4 foota foot_next" href="#!">SIGNIN/UP</a>
-        <a class="white-text text-lighten-4 foota foot_next" href="#!">CONTACT</a>
-      </div>
+  <div class="footer-copyright center">
+    <a class="white-text text-lighten-4 foot_next"  href="#">HOME</a>
+    <a class="white-text text-lighten-4 foot_next"  href="#info">SERVICES</a>
+    <a class="white-text text-lighten-4 foota foot_next" href="#!">SIGNIN/UP</a>
+    <a class="white-text text-lighten-4 foota foot_next" href="#!">CONTACT</a>
+  </div>
 
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
+      <script type="text/javascript">
+    $(document).ready(function() {
+    $('select').material_select();
+  });
+    function preventBack(){window.history.forward();}
+    setTimeout("preventBack()", 0);
+    window.onunload=function(){null};
+  </script>
 </body>
 </html>
