--- a/history.html
+++ b/history.html
@@ -153,13 +153,15 @@
         </div>
     </footer>
         <!-- -------------------------------- footer ends here------------------------------------------------ -->
-
+        <script type="text/javascript" src="js/materialize.min.js"></script>
         <script type="text/javascript">
 			$('select').material_select();
 		</script>
+		
         <script type="text/javascript">
       	$(document).ready(function(){
       		$(".button-collapse").sideNav({
       			menuWidth: 270
       		});
+      	});
       	</script>
