--- a/mainPage.html
+++ b/mainPage.html
@@ -6,7 +6,7 @@
       <a href="#!" class="brand-logo heading1"><span><img src="img/bport_logo.png" height="30" width="30"></span>BLOODPORT</a>
       <a href="#!" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down main_menu">
-        <li><a ui-sref="bloodsure" class="smoothScroll">HOME</a></li>
+        <li><a ui-sref="dashboard.bloodsure" class="smoothScroll">HOME</a></li>
         <li><a href="#info" class="smoothScroll">OUR SERVICES</a></li>
         <li><a href="#event" class="smoothScroll">UPCOMING EVENTS</a></li>
         <li><a href="#photo" class="smoothScroll">PHOTO GALLERY</a></li>
