--- a/history.html
+++ b/history.html
@@ -1,13 +1,10 @@
-
-
-
 <!-- ------------------------------History section starts here ------------------------------------------ -->
    		<div class="history_section">
    			<div class="myContainer">
    				<div class="row">
 			        <div class="col s12">
 			          <ul class="tabs">
-			            <li class="tab col s6  "><a style="color:#c62828" class="active"  href="#inbox">Patients</a></li>
+			            <li class="tab col s6" ng-click="get_history_patient()"><a style="color:#c62828" class="active"  href="#inbox">Patients</a></li>
 			            <li class="tab col s6" ><a style="color:#c62828"  href="#unread">Donors</a></li>
 			          </ul>
 			        </div>
@@ -16,28 +13,25 @@
 				        	<table class="striped responsive-table">
 						        <thead>
 						          <tr>
-						              <th>Name</th>
-						              <th>Date & Time</th>
-						              <th>Quantity</th>
+						              <th>Patient Name</th>
+						              <th>Blood Type</th>
+						              <th>Units of Blood</th>
+						              <th>Doctor Name</th>
+						              <th>Hospital</th>
+						              <th>City</th>
 						          </tr>
 						        </thead>
 
 						        <tbody>
-						          <tr>
-						            <td>Alvin</td>
-						            <td>12-02-2017</td>
-						            <td>200ml</td>
+						          <tr ng-repeat="patient in detail">
+						            <td>{{patient.patient_name}}</td>
+						            <td>{{patient.blood_grp}}</td>
+						            <td>{{patient.unit_of_blood}}</td>
+						            <td>{{patient.doctor_name}}</td>
+						            <td>{{patient.hospital}}</td>
+						           	<td>{{patient.city}}</td>
 						          </tr>
-						          <tr>
-						            <td>Alvin</td>
-						            <td>12-02-2017</td>
-						            <td>200ml</td>
-						          </tr>
-						          <tr>
-						            <td>Jonathan</td>
-						            <td>12-02-2017</td>
-						            <td>200ml</td>
-						          </tr>
+						          
 						        </tbody>
 						      </table>
 				        </div>
