Added login authetication to all buttons on mainPage and logout facility to Dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -29,7 +29,7 @@
 			   	<div class="divider hide-on-large-only"></div>
 				<div class="hide-on-large-only">
 			   		<li class="sidenav-item history"><a class="waves-effect" href="#!"><i class="small material-icons h-icon " style="color:#c62828">vpn_key</i>CHANGE PASSWORD</a> </li>
-			   		<li class="sidenav-item"><a class="waves-effect" href="#!"><i class="small material-icons m-icon" style="color:#c62828">call_received</i>LOGOUT</a> </li>
+			   		<li class="sidenav-item"><a class="waves-effect" href="#!"><i class="small material-icons m-icon" style="color:#c62828" ng-click="logout()">call_received</i>LOGOUT</a> </li>
 			   	</div>
       		</div>    			
 		</ul>
@@ -45,7 +45,7 @@
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
 					<li><a href=""></a></li>
 					<li><a href="">Change Password</a></li>
-					<li><a href="">Logout</a></li>
+					<li><a href="" ng-click="logout()">Logout</a></li>
 				</ul>		        
 			</div>		    
 		</nav>			
