--- a/donor.html
+++ b/donor.html
@@ -2,7 +2,7 @@
 <div class="user_profile_content">
 <div class=" myContainer">
 	<div class="row">
-        <a ui-sref=""><div class="col s12 m6">
+        <a ui-sref="dashboard.donor.findDonor"><div class="col s12 m6">
           <div class="card medium center z-depth-5 card_head">
 
  				<h3>
