--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
  <script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
 <script src="node_modules/angular/angular.js"></script>
-<script type="text/javascript" src="js/app1.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
 
