--- a/sign_up.html
+++ b/sign_up.html
@@ -169,7 +169,9 @@
             </div>
 
             <div class="col offset-s4 s5 m5">
-             <a ui-sref="bloodsure"> <button class="btn waves-effect waves-light btn login_btn" type="submit" name="action">LOGIN</button></a>
+            <!--added by sakshi on 20/7/17-->
+             <button class="btn waves-effect waves-light btn login_btn" type="submit" name="action" ng-click="login()">LOGIN</button>
+             <!--added finished-->
             </div>
           </div>
           </form>
