--- a/hospital.html
+++ b/hospital.html
@@ -1,1 +1,50 @@
-<p>hospital</p>
+<div class="findDonor_section">
+  	<div class="myContainer">
+  		<div class="row">
+  			<div class="col s12 m12">
+  				<div class=" col s12 card-panel white">
+		  			<h5 class="info_heading">Hospitals Details</h5>	
+		  			<div class="divider">
+		  			</div>
+					<div class="filter_chip">
+						<a ng-click=""><div class="chip">Sort by Location</div></a>
+					</div>
+
+					<div class="col s12 card white map">
+		  				wdmlwdueidbfoggogihkrfhrfrfyrufrufhrfhurfh
+		  			</div>	
+
+		  			<div class="col s12 m12 card">
+		  				<table class="striped bordered">
+		  					<thead>
+		  						<tr>
+		  							<th>HOSPITAL ID</th>
+		  							<th>HOSPITAL NAME</th>
+		  							<th>HOSPITAL LOCATION</th>
+		  						</tr>
+		  					</thead>
+
+		  					<tbody>
+		  						<tr>
+		  							<td>1</td>
+		  							<td>abc</td>
+		  							<td>Gurgoan</td>
+		  						</tr>
+
+		  						<tr>
+		  							<td>2</td>
+		  							<td>xyz</td>
+		  							<td>noida</td>
+		  						</tr>
+		  					</tbody>
+		  				</table>
+		  			</div> 
+		  		</div>
+  			</div>				     
+  		</div> 	
+ 	</div>
+</div>
+
+<script type="text/javascript">
+	$('.chips').material_chip();
+</script>
