sme changes and hospital section ui

--- a/findDonor.html
+++ b/findDonor.html
@@ -6,10 +6,10 @@
 		  				<h5 class="info_heading">Donors Details</h5>	
 		  				<div class="divider"></div>
 						<div class="filter_chip">
-							<a ng-click=""><div class="chip">
+							<button class="chip" onclick="alert('i am cicked')">
 							 
 							    Sort by Location
-							 </div></a>
+							 </button>
 
 							 <a ng-click=""><div class="chip">
 							 
