Updating Our Service section images and Footer

--- a/bloodsure.html
+++ b/bloodsure.html
@@ -1,4 +1,5 @@
 
+
 <div class="blood_sure_section">
   		<div class="myContainer">
   			<div class="row">
@@ -89,9 +90,8 @@
 									<p style="color: #c62828; font-size: 18px; padding-top: 1vw;">AMOUNT:</p>
 								</div>
 
-								<div class="input-field col s5 m5">
-									
-									<input type="text" name="cost" disabled ng-value="data.cost">
+								<div class="input-field col s5 m5" >
+									<input type="text" name="cost" disabled ng-value="data.cost" style="color: #c62828">
 								</div>
 							</div>
 
