--- a/donor.html
+++ b/donor.html
@@ -2,17 +2,21 @@
 <div class="user_profile_content">
 <div class=" myContainer">
 	<div class="row">
-        <a ui-sref="dashboard.donor.findDonor"><div class="col s12 m6">
-          <div class="card medium center z-depth-5 card_head">
-
- 				<h3>
-             		FIND DONOR
-             	</h3>     
+        <a ui-sref="dashboard.findDonor"><div class="col s12 m6">
+          <div class="card medium center  hoverable card_head">
+          <div class="findDonorImg">
+            <img src="img/findDonor.png" >
+          </div>
+          
+   				 <h3>FIND DONOR</h3>     
           </div>
         </div></a>
 
-        <a ui-sref=""><div class="col s12 m6">
-          <div class="card  medium center z-depth-5 card_head_donate">
+        <a ui-sref="dashboard.beDonor"><div class="col s12 m6">
+          <div class="card  medium center hoverable card_head_donate">
+          <div class="beDonorImg">
+            <img src="img/bedonor.png" >
+          </div>
           	 <h3 >BE A DONOR</h3>   
           </div>
         </div></a>
