--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <!-- --------------------------My side Navbar------------------------------------------- -->
     <div>
      	<ul id="slide-out" class="side-nav fixed sidenav">
-      		<li class="heading"><h3 style="color:white">BLOODPORT</h3></li>
+      		<li ui-sref="mainpage" class="heading"><h3 style="color:white">BLOODPORT</h3></li>
       		<li ><div class="divider"></div></li>
       		
       		<div class="row">
@@ -27,7 +27,7 @@
 			    <li class="sidenav-item history"><a ui-sref="dashboard.history" class="waves-effect" href="#!"><i class="small material-icons h-icon " style="color:white">schedule</i>HISTORY</a> </li>
 			   	<div class="divider hide-on-large-only"></div>
 				<div class="hide-on-large-only">
-				<!-- addded by sakshi on 20/7/17 -->
+			   		<!-- addded by sakshi on 20/7/17 -->
 			   		<li class="sidenav-item center" style="color: white">{{logged_email}}</li>
 			   		<li class="sidenav-item center" style="color: white"><a class="waves-effect" href="#!" ng-click="logout()">LOGOUT</a> </li>
 			   		<!-- add ended -->
@@ -42,8 +42,9 @@
 	  	<nav class="myNavbar">
 			<div class="nav-wrapper mynav">
 				<a href="#" data-activates="slide-out" class="right button-collapse"><i class="material-icons">menu</i></a>
-				<a href="#" class="brand-logo user_info">BloodSURE (Book/Pay/Receive)</a>
+				<a href="#" class="brand-logo user_info ">{{dahsboardtitle}}</a>
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
+					<li><a href=""></a></li>
 					<!-- addded by sakshi on 20/7/17 -->
 					<li style="color: #c62828;">{{logged_email}}</li>
 					<!-- add ended -->
@@ -58,7 +59,7 @@
 
 <!-- -------------------------------- footer starts here------------------------------------------------ -->
 
-   	<footer class="page-footer dashboard_footer">
+  	<footer class="page-footer dashboard_footer">
       <div class="container">
         <div class="row">
           <div class="col m12 s12 foot">
@@ -81,5 +82,5 @@
 	            <a class="white-text text-lighten-4  foota" href="#!">SIGNIN/UP </a>
             </div>
         </div>
-    </footer>
-        <!-- -------------------------------- footer ends here------------------------------------------------ -->
+    </footer>-->
+        <!-- -------------------------------- footer ends here------------------------------------------------ 
