--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       <link rel="stylesheet" href="css/animate.min.css">
       <link rel="stylesheet" type="text/css" href="css/responsive.css">
       <link rel="stylesheet" type="text/css" href="css/materialize-social.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+       
        <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -19,7 +20,7 @@
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
-
+<script type="text/javascript" src="js/smoothscroll.js"></script>
 <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
 
 <base href="/">
