Sorted the Horizontal scroll in mainpage and Dashboard,Sign-up page also updated

--- a/mainPage.html
+++ b/mainPage.html
@@ -1,5 +1,6 @@
 
 <link rel="stylesheet" type="text/css" href="css/main.css">
+<link rel="stylesheet" type="text/css" href="css/responsive.css">
 <!-- -------------------------------------------------Navbar Starts Here---------------------------------------------------- -->
 
    <nav class="nav1">
@@ -127,7 +128,7 @@
     <div class="donation_process">  
       <div class="row">
         <div class="col m12 s12 bloodgrp">
-          <p class="center-align heading" ><i class="material-icons">clear_all</i><span style="font-size:40px">DONATION PROCESS</span><i class="material-icons">clear_all</i></p>
+          <p class="center-align heading" ><i class="material-icons">clear_all</i><span class="our_serv">DDONATION PROCESS</span><i class="material-icons">clear_all</i></p>
           <h5 class="center-align grey-text text-darken-1">Increase the awareness among people about various issues</h5>
         </div>
       </div>
