--- a/dashboard.html
+++ b/dashboard.html
@@ -59,7 +59,7 @@
 
 <!-- -------------------------------- footer starts here------------------------------------------------ -->
 
-  	<footer class="page-footer dashboard_footer">
+  	<!--<footer class="page-footer dashboard_footer">
       <div class="container">
         <div class="row">
           <div class="col m12 s12 foot">
