--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
       <link rel="stylesheet" href="css/animate.min.css">
-      <link rel="stylesheet" type="text/css" href="css/responsive.css">
       <link rel="stylesheet" type="text/css" href="css/materialize-social.css">
        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
        
-       <link rel="stylesheet" type="text/css" href="css/style.css">
+    
 </head>
 <body>
 
@@ -20,8 +19,9 @@
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
+<script src="node_modules/scrollreveal/dist/scrollreveal.min.js"></script>
 <script type="text/javascript" src="js/smoothscroll.js"></script>
-<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+
 
 <base href="/">
 <div ui-view></div>
