--- a/sign_up.html
+++ b/sign_up.html
@@ -23,10 +23,10 @@
     <div class="row main_div">
       <div class="col s12 m8 white">
         <div class="row icons">
-          <div class="col s12 m4">
+          <div class="col s6 m4 center">
             <a class="waves-effect waves-light btn social facebook"><i class="fa fa-facebook"></i>Facebook</a> 
           </div>
-          <div class="col s12 m4">
+          <div class="col s6 m4 center">
             <a class="waves-effect waves-light btn social google"><i class="fa fa-google"></i>  Google</a> 
           </div>
         </div>
