--- a/userprofile.html
+++ b/userprofile.html
@@ -69,6 +69,7 @@
 							<div class="row">
 							    <div class="input-field col s6 m6">
 							    <select ng-model="user_blood_grp" ng-value="show_data.user_blood_grp">
+							    	<option value="" disabled selected ng-value="show_data.user_blood_grp"></option>
 					                <option value="A+">A+</option>
 					                <option value="B+">B+</option>
 					                <option value="AB+">AB+</option>
