--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="css/animate.min.css">
       <link rel="stylesheet" type="text/css" href="css/materialize-social.css">
        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
-       
+       <link rel="stylesheet" type="text/css" href="node_modules/angular-loading-bar/build/loading-bar.min.css" type="text/css" media="all/">
     
 </head>
 <body>
@@ -22,7 +22,7 @@
 <script src="node_modules/scrollreveal/dist/scrollreveal.min.js"></script>
 <script type="text/javascript" src="js/smoothscroll.js"></script>
 
-
+<script type="text/javascript" src="node_modules/angular-loading-bar/build/loading-bar.min.js"></script>
 <base href="/">
 <div ui-view></div>
 
