--- a/mainPage.html
+++ b/mainPage.html
@@ -8,7 +8,7 @@
       <a ui-sref="mainpage" class="brand-logo heading1">BLOODPORT</a>
       <a href="#!" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down main_menu">
-        <li><a ui-sref="dashboard.bloodsure" class="smoothScroll">HOME</a></li>
+        <li><a href="#home" class="smoothScroll">HOME</a></li>
         <li><a href="#info" class="smoothScroll">OUR SERVICES</a></li>
         <li><a href="#event" class="smoothScroll">UPCOMING EVENTS</a></li>
         <li><a href="#photo" class="smoothScroll">PHOTO GALLERY</a></li>
@@ -38,11 +38,22 @@
       <source src="video/donation.mp4" type="video/mp4">
     </video> 
 
-    <div class="carousel carousel-slider myslider" data-indicators="true">
-    <div class="carousel-fixed-item center">
-      <a href="#request" class="smoothScroll" ><i  class=" material-icons medium scroll">keyboard_arrow_down</i></a>
-    </div>
+    <div class="row">
+      <div class="offset-m1 col m10 offset-m1 content center-align">
+                <h6 class="welcome center-align">Welcome To BloodPORT</h6>
+                <div class="typewriter_effect">
+                  <p><a href="" class="typewrite light grey-text text-lighten-3" data-period="2000" data-type='["A life may depend on a gesture from you, a bottle of Blood.", "The best blood will at some time get into a fool or a mosquito.","To give blood you need neither extra strength nor extra food,and you will save a life."]'></a></p>
+                </div>
+                <div class="emergency_btn">
+                  <a  ng-click="bloodsure()" class="waves-effect waves-light btn-large" style="background-color:transparent;border:2px solid #c62828"><span style="font-weight:bolder">EMERGENCY</span></a>
+                </div>
 
+               
+
+          </div>
+    </div>
+   <!-- <div class="carousel carousel-slider myslider" data-indicators="true">
+    
     <div class="carousel-item white-text  img1" href="#one!">
     <div class="container">
         <div class="row">
@@ -92,7 +103,7 @@
         </div> 
       </div>
     </div>
-  </div>
+  </div>-->
 </div>
 
 
@@ -107,8 +118,8 @@
       <div class="container_help">
         <div class="row">
           <div class="col m7 s12">
-            <h4 class="req_heading">WE ARE HELPING PEOPLE TO GET BLOOD</h4>
-            <p class="grey-text text-darken-1">You can give blood at any of our blood donation venues all over the world. We have total sixty thousands donor centers and visit thousands of other venues on various occasions.</p>
+            <h4 class="req_heading">WE HELP YOU FIND BLOOD INSTANTLY</h4>
+            <p class="grey-text text-darken-1">BloodPort let's you find blood donors, hospitals, blood banks around you 24*7. You can also donate by finding out blood donation camps around you.</p>
           </div>
           <div class="col m5 s12 center">
             <div class="request_button">
@@ -128,8 +139,8 @@
     <div class="donation_process">  
       <div class="row">
         <div class="col m12 s12 bloodgrp">
-          <p class="center-align heading" ><i class="material-icons">clear_all</i><span class="our_serv">DDONATION PROCESS</span><i class="material-icons">clear_all</i></p>
-          <h5 class="center-align grey-text text-darken-1">Increase the awareness among people about various issues</h5>
+          <p class="center-align heading" ><i class="material-icons">clear_all</i><span class="our_serv">DONATION PROCESS</span><i class="material-icons">clear_all</i></p>
+          <h4 class="center-align grey-text text-darken-1">Every blood donation, a short 10 minutes procedure, can help save 3 lives</h4>
         </div>
       </div>
 
