updating emergency functionality

--- a/dashboard.html
+++ b/dashboard.html
@@ -28,7 +28,7 @@
 			   	<div class="divider hide-on-large-only"></div>
 				<div class="hide-on-large-only">
 			   		<!-- addded by sakshi on 20/7/17 -->
-			   		<li class="sidenav-item center" style="color: white">{{logged_email}}</li>
+			   		<li class="sidenav-item center" style="color: white">{{logged_mobile_no}}</li>
 			   		<li class="sidenav-item center" style="color: white"><a class="waves-effect" href="#!" ng-click="logout()">LOGOUT</a> </li>
 			   		<!-- add ended -->
 			   	</div>
@@ -46,7 +46,7 @@
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
 					<li><a href=""></a></li>
 					<!-- addded by sakshi on 20/7/17 -->
-					<li style="color: #c62828;">{{logged_email}}</li>
+					<li style="color: #c62828;">{{logged_mobile_no}}</li>
 					<!-- add ended -->
 					<li><a href="" ng-click="logout()">Logout</a></li>
 				</ul>		        
