--- a/sign_up.html
+++ b/sign_up.html
@@ -139,9 +139,9 @@
           <div class="row">
             <div class="col offset-s1 s10 offset-m1 m10">
               <div class="input-field valign-wrapper">
-                <i class="material-icons prefix white-text">email</i>
-                <input id="icon_email" type="email" class="validate login_mail_ip" ng-model="user_login_email" required>
-                <label for="icon_email" style="color: white;">Your Email</label>
+                <i class="material-icons prefix white-text">phone</i>
+                <input id="icon_phone" type="tel" class="validate" ng-model="user_login_mobile_no" required>
+                <label for="icon_phone" style="color: white;">Enter Mobile no.</label>
               </div>
             </div>
           </div>
