--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <script type="text/javascript" src="js/materialize.min.js"></script>
 <script src="node_modules/scrollreveal/dist/scrollreveal.min.js"></script>
 <script type="text/javascript" src="js/smoothscroll.js"></script>
-
+<script type="text/javascript" src="node_modules/angular-typed/dist/angular-typed.min.js"></script>
 <script type="text/javascript" src="node_modules/angular-loading-bar/build/loading-bar.min.js"></script>
 <base href="/">
 <div ui-view></div>
