--- a/sign_up.html
+++ b/sign_up.html
@@ -56,7 +56,7 @@
           <div class="col s12 m6">
             <div class="input-field valign-wrapper">
               <i class="material-icons prefix tel" style="color: #c62828;">phone</i>
-              <input id="icon_telephone" type="tel" class="validate tel_ip" ng-model="user_mobile_no" required>
+              <input id="icon_telephone" type="tel" class="validate tel_ip" ng-model="user_mobile_no" maxlength="10" required>
               <label for="icon_telephone" style="color:#c62828;">Mobile No</label>
             </div>
           </div>
@@ -104,7 +104,7 @@
           <div class="col s12 m6">
             <div class="input-field valign-wrapper">
               <i class="material-icons prefix pass" style="color: #c62828;" >lock</i>
-              <input id="icon_password" type="password" class="validate pass_ip" ng-model="user_password" required>
+              <input id="icon_password" type="password" class="validate pass_ip" ng-model="user_password" maxlength="8"required>
               <label for="icon_password" style="color: #c62828;">Password</label>
             </div>
           </div>
@@ -112,7 +112,7 @@
           <div class="col s12 m6">
             <div class="input-field valign-wrapper">
               <i class="material-icons prefix cpass" style="color: #c62828;" >lock</i>
-              <input id="icon_password" type="password" class="validate cpass_ip" ng-model="user_confirm_password" required>
+              <input id="icon_password" type="password" class="validate cpass_ip" ng-model="user_confirm_password" required maxlength="8">
               <label for="icon_password" style="color: #c62828;">Confirm Password</label>
             </div>
           </div>
@@ -140,7 +140,7 @@
             <div class="col offset-s1 s10 offset-m1 m10">
               <div class="input-field valign-wrapper">
                 <i class="material-icons prefix white-text">phone</i>
-                <input id="icon_phone" type="tel" class="validate" ng-model="user_login_mobile_no" required>
+                <input id="icon_phone" type="tel" class="validate" ng-model="user_login_mobile_no" required maxlength="10">
                 <label for="icon_phone" style="color: white;">Enter Mobile no.</label>
               </div>
             </div>
@@ -150,18 +150,18 @@
             <div class="col offset-s1 s10 offset-m1 m10">
               <div class="input-field valign-wrapper">
                 <i class="material-icons prefix white-text">lock</i>
-                <input id="icon_password" type="password" class="validate login_pass_ip" ng-model="user_login_password" required>
+                <input id="icon_password" type="password" class="validate login_pass_ip" ng-model="user_login_password" required maxlength="8">
                 <label for="icon_password" style="color: white;">Password</label>
               </div>
             </div>
           </div>
 
-          <div class="row">
+          <!--<div class="row">
             <p  class="center-align white-text">
               <input type="checkbox" class="filled-in" id="filled-in-box" checked="checked" />
               <label for="filled-in-box" class="white-text">Remember Me</label>
             </p>
-          </div>
+          </div>-->
 
           <div class="row center">
             <div class="col offset-s3 s6 m5" >
