--- a/mainPage.html
+++ b/mainPage.html
@@ -23,7 +23,7 @@
       <li class="center"><a style="font-size:25px;color:#c62828;"><span><img src="img/bport_logo.png" width="30" height="30"></span>BLOODPORT</a></li>
        <div class="divider"></div>
        <li><a ui-sref="signup" style="font-size:18px;color:#c62828"><i style="color:#c62828" class="small material-icons">vpn_key</i>Sign-in/Sign-up</a></li>
-      <li class=""><a ui-sref="dashboard.hospital" style="font-size:18px;color:#c62828;"><i style="color:#c62828" class="small material-icons">account_balance</i>Home</a></li>
+      <li class=""><a ui-sref="dashboard.hospital" style="font-size:18px;color:#c62828;"><i style="color:#c62828" class="small material-icons">home</i>Home</a></li>
      
         <li><a href="#info" class="smoothScroll" style="font-size:18px;color:#c62828"><i style="color:#c62828"  class="small material-icons">build</i>Our Services</a></li>
         <li><a href="#event" class="smoothScroll" style="font-size:18px;color:#c62828"><i style="color:#c62828"  class="small material-icons">event</i>Upcoming Events</a></li>
@@ -47,15 +47,15 @@
     </video> 
 
     <div id="modal1" class="modal mainPagemodal">
-      <div class="modal-content center">
+      <div class="modal-content center" ng-hide="mainOTP">
         <div class="col s12 center">
             <h4 style="color:#c62828">Enter Details</h4>
             <p style="color:#bdbdbd">Enter details and then press "Submit"</p>
         </div>
-      <form name="modalfrorm" novalidate ng-submit="submit_details()" class="mainPagemodal_form">
+      <form name="modalfrorm" novalidate ng-submit="check_user()" class="mainPagemodal_form">
           <div class="input-field col m12 s12">
             <i class="material-icons prefix tel" style="color: #c62828">phone</i>
-            <input id="phone" type="tel" ng-model="modal_user_mobile_no" required style="color: #c62828" maxlength="10">
+            <input id="phone" type="tel" ng-model="modal_user_mobile_no" required style="color: #c62828">
             <label for="phone" style="color: #c62828">Enter Mobile No.</label>
           </div>
 
@@ -90,6 +90,22 @@
             <a href="#" class="btn-flat cancel_btn">Cancel</a>
           </div>
       </form>
+      </div>
+
+      <div class="modal-content center" ng-show="mainOTP">
+        <div class="col s12 center">
+            <h4 style="color:#c62828">Enter OTP</h4>
+            <p style="color:#bdbdbd">Enter OTP and then press "Verify"</p>
+        </div>
+
+        <div class="input-field col s12 m12 valign-wrapper">
+          <input type="tel" name="emergencyOTP" ng-model="inputOTP" required style="color: #c62828">
+          <label for="OTP" style="color: #c62828">Enter OTP</label>
+        </div>
+
+        <div class="center">
+          <a class="btn-flat cancel_btn" type="submit" ng-click="verifyEmergencyOTP()">VERIFY</a>
+        </div>
       </div>
     </div>
     
@@ -194,7 +210,7 @@
       <div class="row">
         <div class="col m12 s12 bloodgrp">
           <p class="center-align heading" ><i class="material-icons">clear_all</i><span class="our_serv">DONATION PROCESS</span><i class="material-icons">clear_all</i></p>
-          <h4 class="center-align grey-text text-darken-1 our_serv_text">Every blood donation, a short 10 minutes procedure, can help save 3 lives</h4>
+          <h5 class="center-align grey-text text-darken-1 our_serv_text">Every blood donation, a short 10 minutes procedure, can help save 3 lives</h5>
         </div>
       </div>
 
