Updating some UI components

--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <!-- --------------------------My side Navbar------------------------------------------- -->
     <div>
      	<ul id="slide-out" class="side-nav fixed sidenav">
-      		<li ui-sref="mainpage" class="heading"><h3 style="color:white">BLOODPORT</h3></li>
+      		<li ui-sref="mainpage" class="heading"><h3 style="color:white"><span><img src="img/bport_logo.png" class="iconImage"></span>BLOODPORT</h3></li>
       		<li ><div class="divider"></div></li>
       		
       		<!--<div class="row">
