--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html ng-app="main_app">
 <head>
   <title>BLOODPORT</title>
+
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <link href="https://fonts.googleapis.com/css?family=Dosis:600" rel="stylesheet">
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -10,6 +11,7 @@
       <link rel="stylesheet" type="text/css" href="css/materialize-social.css">
        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
        <link rel="stylesheet" type="text/css" href="node_modules/angular-loading-bar/build/loading-bar.min.css" type="text/css" media="all/">
+        <link rel="shortcut icon" type="image/x-icon" href="bport_logo.png" />
     
 </head>
 <body>
@@ -21,7 +23,7 @@
 <script type="text/javascript" src="js/materialize.min.js"></script>
 <script src="node_modules/scrollreveal/dist/scrollreveal.min.js"></script>
 <script type="text/javascript" src="js/smoothscroll.js"></script>
-<script type="text/javascript" src="node_modules/angular-typed/dist/angular-typed.min.js"></script>
+<script type="text/javascript" src="node_modules/angular-typer/dist/typer.min.js"></script>
 <script type="text/javascript" src="node_modules/angular-loading-bar/build/loading-bar.min.js"></script>
 <base href="/">
 <div ui-view></div>
