--- a/sign_up.html
+++ b/sign_up.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class="col s12 m12">
-    <h4 class="center align" style="color:#c62828; padding-top: 5vh">BLOODPORT</h4>
+  <a ui-sref="mainpage"><p class="center align" style="color:#c62828; padding-top: 5vh;font-size:24px"><span><img src="img/bport_logo.png" width="90" height="60" style="position:absolute;top:7%;left:40%"></span>BLOODPORT</p></a>
   </div>
   <div class="container">
     <div class="row main_div">
@@ -140,7 +140,7 @@
             <div class="col offset-s1 s10 offset-m1 m10">
               <div class="input-field valign-wrapper">
                 <i class="material-icons prefix white-text">phone</i>
-                <input id="icon_phone" type="tel" class="validate" ng-model="user_login_mobile_no" required maxlength="10">
+                <input id="icon_phone" type="tel" style="color: white;" class="validate" ng-model="user_login_mobile_no" required maxlength="10">
                 <label for="icon_phone" style="color: white;">Enter Mobile no.</label>
               </div>
             </div>
@@ -150,7 +150,7 @@
             <div class="col offset-s1 s10 offset-m1 m10">
               <div class="input-field valign-wrapper">
                 <i class="material-icons prefix white-text">lock</i>
-                <input id="icon_password" type="password" class="validate login_pass_ip" ng-model="user_login_password" required maxlength="8">
+                <input id="icon_password" type="password" style="color: white;" class="validate login_pass_ip" ng-model="user_login_password" required maxlength="8">
                 <label for="icon_password" style="color: white;">Password</label>
               </div>
             </div>
