updating photo gallery

--- a/mainPage.html
+++ b/mainPage.html
@@ -663,28 +663,28 @@
           <div class="grid">
             <div class="grid-sizer"></div>
               <div class="grid-item">
-                <img src="img/ph1.jpg" class="ph1 materialboxed">
+                <img src="img/photo11.jpeg" class="ph1 materialboxed">
               </div>
               <div class="grid-item">
-                <img src="img/ph2.jpg" class="ph2 materialboxed">
+                <img src="img/photo2.jpeg" class="ph2 materialboxed">
               </div>
               <div class="grid-item">
                 <img src="img/ph4.jpg" class="ph3 materialboxed">
               </div>
               <div class="grid-item">
-                <img src="img/ph11.jpg" class="ph4 materialboxed">
+                <img src="img/photo7.jpeg" class="ph4 materialboxed">
               </div>
               <div class="grid-item">
                 <img src="img/ph10.jpg" class="ph5 materialboxed">
               </div>
               <div class="grid-item">
-                <img src="img/ph5.jpg" class="ph6 materialboxed">
+                <img src="img/photo6.jpeg" class="ph6 materialboxed">
               </div>
               <div class="grid-item">
-                <img src="img/ph6.jpg" class="ph7 materialboxed">
+                <img src="img/photo5.jpeg" class="ph7 materialboxed">
               </div>
               <div class="grid-item">
-                <img src="img/ph8.jpg" class="ph8 materialboxed">
+                <img src="img/photo3.jpeg" class="ph8 materialboxed">
               </div>
               <div class="grid-item">
                 <img src="img/ph7.jpg" class="ph9 materialboxed">
